test/compile_failure/24_arrow_on_struct.c
// EXPECT-ERRORS: 1
// EXPECT: '->' requires pointer to struct
struct Pair {
    int value;
};

int main() {
    Pair pair = {1};
    return pair->value;
}
